Rudimentary C++ support, tested with GNU ++ 5.2. Support for `using' declarations added, and `extern "C"' added where necessary.

--- a/src/objc/objc.in
+++ b/src/objc/objc.in
@@ -439,7 +439,9 @@ for input in $inputs
 	     fi
 	     ;;
 	  *) echo '#line 1 "'$input'"' > $tmpc ;
-	     cat $input >> $tmpc ; junk="$junk $tmpc" ;;
+	     cat $input >> $tmpc ;
+
+             ;;
 	esac
 
         if [ $precompile = y ]; then
