Objective-C 2.0-style properties added. Not dynamic yet, nor do they do anything other than declare instance variables.

--- a/src/oclib/Makefile.in
+++ b/src/oclib/Makefile.in
@@ -104,6 +104,7 @@ OBJFILES=\
     globdef.$(OBJSUFFIX)\
     structsp.$(OBJSUFFIX)\
     classdef.$(OBJSUFFIX)\
+    propdef.$(OBJSUFFIX)\
     enumtor.$(OBJSUFFIX)\
     enumsp.$(OBJSUFFIX)\
     parmdef.$(OBJSUFFIX)\
