OBJPAK: some work on the implementation of PCNumber PROPERTIES: only generate setters/getters if the class is being implemented. i.e. not if it's just an interface

--- a/objpak/Makefile.kmk
+++ b/objpak/Makefile.kmk
@@ -9,7 +9,7 @@ objpak_SOURCES = badvers.m notfound.m octext.m rectangl.m sortcltn.m \
     unknownt.m array.m bagseq.m idarray.m outofbnd.m sequence.m \
     treeseq.m valueseq.m ascfiler.m cltn.m intarray.m paragrph.m \
     set.m txtattr.m assoc.m cltnseq.m keyseq.m ocstring.m point.m \
-    setseq.m txtstyle.m
+    setseq.m txtstyle.m PCNumber.m
 
 objpakhdr_INST = include/objpak/
 objpakhdr_IFFLAGS = -m 644
