--- a/objpak/Makefile.kmk
+++ b/objpak/Makefile.kmk
@@ -11,7 +11,7 @@ objpak_SOURCES = badvers.m notfound.m octext.m rectangl.m sortcltn.m \
     treeseq.m valueseq.m ascfiler.m cltn.m intarray.m paragrph.m \
     set.m txtattr.m assoc.m cltnseq.m keyseq.m ocstring.m point.m \
     setseq.m txtstyle.m PCNumber.m
-objpak_INCS = $(PATH_SUB_CURRENT)/hdr
+objpak_INCS = $(PATH_SUB_CURRENT)/hdr $(INTERNAL_INCS)
 
 objpakhdr_INST = include/objpak/
 objpakhdr_IFFLAGS = -m 644
