MAKE-SYSTEM: enable building of reference-counting objpak and objcrt PARSER: emit an error when a pointer isn't a pointer

--- a/objcrt/Makefile.kmk
+++ b/objcrt/Makefile.kmk
@@ -1,7 +1,7 @@
 SUB_DEPTH = ..
 include $(KBUILD_PATH)/subheader.kmk
 
-LIBRARIES += objcrt
+LIBRARIES += objcrt objcrtr
 
 objcrt_TEMPLATE = OBJC
 objcrt_SOURCES = Block.m Exceptn.m Message.m Object.m OutOfMem.m crt.m
@@ -10,5 +10,6 @@ objcrtr_EXTENDS = objcrt
 objcrtr_EXTENDS_BY = appending
 objcrtr_OBJCFLAGS = -refcnt
 objcrtr_DEFS = OBJC_REFCNT
+objcrtr_DEPS = $(objcrt_1_TARGET)
 
 include $(FILE_KBUILD_SUB_FOOTER)
