--- a/objc/Makefile.kmk
+++ b/objc/Makefile.kmk
@@ -43,7 +43,7 @@ $(PATH_SUB_CURRENT)/lex.m: $(PATH_SUB_CURRENT)/lex.lm $(PATH_SUB_CURRENT)/yacc.m
 
 OBJC_INST = bin/
 OBJC_IFFLAGS = -m 755
-OBJC_SOURCES = drv/objc
+OBJC_SOURCES = drv/jxobjc
 
 LINKFILES_INST = lib/
 LINKFILES_IFFLAGS = -m 644
