--- a/objpak/Makefile.kmk
+++ b/objpak/Makefile.kmk
@@ -2,7 +2,7 @@ SUB_DEPTH = ..
 include $(KBUILD_PATH)/subheader.kmk
 
 INSTALLS += objpakhdr
-LIBRARIES += objpak
+LIBRARIES += objpak objpak_s
 
 objpak_TEMPLATE = OBJC
 objpak_SOURCES = badvers.m notfound.m octext.m rectangl.m sortcltn.m \
@@ -13,11 +13,10 @@ objpak_SOURCES = badvers.m notfound.m octext.m rectangl.m sortcltn.m \
     setseq.m txtstyle.m JXNumber.m
 objpak_INCS = $(PATH_SUB_CURRENT)/hdr $(INTERNAL_INCS)
 
-objpakr_EXTENDS = objpak
-objpakr_EXTENDS_BY = appending
-objpakr_OBJCFLAGS = -refcnt
-objpakr_DEFS = OBJC_REFCNT
-objpakr_DEPS = $(objpak_1_TARGET)
+objpak_s_EXTENDS = objpak
+objpak_s_EXTENDS_BY = appending
+objpak_s_OBJCFLAGS = -dl -pic
+objpak_s_DEPS = $(objpak_1_TARGET)
 
 objpakhdr_INST = include/objpak/
 objpakhdr_IFFLAGS = -m 644
