--- a/objcrt/Makefile.kmk
+++ b/objcrt/Makefile.kmk
@@ -1,7 +1,7 @@
 SUB_DEPTH = ..
 include $(KBUILD_PATH)/subheader.kmk
 
-LIBRARIES += objcrt objcrt_s
+LIBRARIES += objcrt objcrt_s objcrtr
 
 objcrt_TEMPLATE = OBJC
 objcrt_SOURCES = Block.m Exceptn.m Message.m Object.m OutOfMem.m crt.m
@@ -10,5 +10,10 @@ objcrt_s_EXTENDS = objcrt
 objcrt_s_EXTENDS_BY = appending
 objcrt_s_OBJCFLAGS = -dl -pic
 objcrt_s_DEPS = $(objcrt_1_TARGET)
+
+objcrtr_EXTENDS = objcrt
+objcrtr_EXTENDS_BY = appending
+objcrtr_OBJCFLAGS = -refcnt -DOBJC_REFCNT=1
+objcrtr_DEPS = $(objcrt_s_1_TARGET)
 
 include $(FILE_KBUILD_SUB_FOOTER)
