--- a/objpak/Makefile.kmk
+++ b/objpak/Makefile.kmk
@@ -2,7 +2,7 @@ SUB_DEPTH = ..
 include $(KBUILD_PATH)/subheader.kmk
 
 INSTALLS += objpakhdr
-LIBRARIES += objpak objpak_s
+LIBRARIES += objpak objpak_s objpakr
 
 objpak_TEMPLATE = OBJC
 objpak_SOURCES = badvers.m notfound.m octext.m rectangl.m sortcltn.m \
@@ -17,6 +17,11 @@ objpak_s_EXTENDS = objpak
 objpak_s_EXTENDS_BY = appending
 objpak_s_OBJCFLAGS = -dl -pic
 objpak_s_DEPS = $(objpak_1_TARGET)
+
+objpakr_EXTENDS = objpak
+objpakr_EXTENDS_BY = appending
+objpakr_OBJCFLAGS = -refcnt -DOBJC_REFCNT=1
+objpakr_DEPS = $(objpak_s_1_TARGET)
 
 objpakhdr_INST = include/objpak/
 objpakhdr_IFFLAGS = -m 644
