CODEBASE: More public/private header unification.

--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -12,11 +12,7 @@ CRTHDRS_INST = include/objcrt/
 CRTHDRS_IFFLAGS = -m 644
 CRTHDRS_SOURCES = $(wildcard include/objcrt/*.h)
 
-OCLIBHDRS_INST = include/oclib/
-OCLIBHDRS_IFFLAGS = -m 644
-OCLIBHDRS_SOURCES = $(wildcard include/oclib/*.h)
-
-INSTALLS += CRTHDRS OCLIBHDRS
+INSTALLS += CRTHDRS
 
 PKGNAME = JXObjC-$(KBUILD_TARGET)_$(KBUILD_TARGET_ARCH).tar.gz
 PKGDIRS = lib bin include
