--- a/objpak/Makefile.kmk
+++ b/objpak/Makefile.kmk
@@ -10,7 +10,7 @@ objpak_SOURCES = badvers.m notfound.m octext.m rectangl.m sortcltn.m \
     unknownt.m array.m bagseq.m idarray.m outofbnd.m sequence.m \
     treeseq.m valueseq.m ascfiler.m cltn.m intarray.m paragrph.m \
     set.m txtattr.m assoc.m cltnseq.m keyseq.m ocstring.m point.m \
-    setseq.m txtstyle.m JXNumber.m
+    setseq.m txtstyle.m Number.m
 objpak_INCS = $(PATH_SUB_CURRENT)/hdr $(INTERNAL_INCS)
 
 objpak_s_EXTENDS = objpak
