OBJECT PAK: Some work on IODevices

--- a/objpak/Makefile.kmk
+++ b/objpak/Makefile.kmk
@@ -10,7 +10,8 @@ objpak_SOURCES = $(wildcard $(PATH_ROOT)/objpak/*.m) \
 	$(wildcard $(PATH_ROOT)/objpak/Exception/*.m) \
 	$(wildcard $(PATH_ROOT)/objpak/Notification/*.m) \
 	$(wildcard $(PATH_ROOT)/objpak/Threads/*.m) \
-	$(wildcard $(PATH_ROOT)/objpak/RunLoop/*.m)
+	$(wildcard $(PATH_ROOT)/objpak/RunLoop/*.m) \
+	$(wildcard $(PATH_ROOT)/objpak/IODevice/*.m)
 
 objpak_INCS = $(INTERNAL_INCS) Collection
 
