--- a/objcrt/Makefile.kmk
+++ b/objcrt/Makefile.kmk
@@ -6,7 +6,7 @@ INSTALLS += objcrthdr
 
 objcrt_TEMPLATE = OBJC
 objcrt_SOURCES = Object/Block.m Object/Exceptn.m Object/Message.m \
-	Object/Object.m Object/OutOfMem.m Object/Proxy.m \
+	Object/Object.m Object/OutOfMem.m Object/Proxy.m Object/RtObject.m \
 	crt.m stktrace.m memory.m seltab.m mod.m messenger.m
 
 objcrt_s_EXTENDS = objcrt
