--- a/Makefile.kmk
+++ b/Makefile.kmk
@@ -14,4 +14,7 @@ PKGDIRS = lib bin include
 package:
 	tar -C $(PATH_INS) -cvzf $(PKGNAME) $(PKGDIRS)
 
+cleandoc:
+	rm -rf doc/masterTOC.html doc/Runtime
+
 include $(FILE_KBUILD_SUB_FOOTER)
