--- a/objc/oclib/Makefile.kmk
+++ b/objc/oclib/Makefile.kmk
@@ -16,7 +16,7 @@ oclib_SOURCES = casestmt.m datadef.m forstmt.m msgxpr.m propdef.m stmt.m \
     gatrdecl.m lblstmt.m pfixxpr.m sizeof.m unyxpr.m binxpr.m contstmt.m \
     enumtor.m gattrib.m listxpr.m pointer.m stardecl.m util.m blockxpr.m \
     cppdirec.m expr.m globdef.m methdef.m precdecl.m stclass.m var.m \
-    btincall.m dasmstmt.m exprstmt.m gotostmt.m method.m precxpr.m stkframe.m \
+    btincall.m dasmstmt.m exprstmt.m gotostmt.m method.m precxpr.m \
     whilstmt.m protodef.m prdotxpr.m encxpr.m
 
 include $(FILE_KBUILD_SUB_FOOTER)
