CODEBASE: Clean things up. Also, add a ConstantString for compiler-emitted string literal objects.

--- a/objpak/Makefile.kmk
+++ b/objpak/Makefile.kmk
@@ -12,7 +12,8 @@ objpak_SOURCES = $(wildcard $(PATH_ROOT)/objpak/*.m) \
 	$(wildcard $(PATH_ROOT)/objpak/Threads/*.m) \
 	$(wildcard $(PATH_ROOT)/objpak/RunLoop/*.m) \
 	$(wildcard $(PATH_ROOT)/objpak/IODevice/*.m) \
-	$(wildcard $(PATH_ROOT)/objpak/KVCoding/*.m)
+	$(wildcard $(PATH_ROOT)/objpak/KVCoding/*.m) \
+	$(wildcard $(PATH_ROOT)/objpak/String/*.m)
 
 objpak_INCS = $(INTERNAL_INCS) Collection KVCoding
 
