Another round of cleaning of Client.kmk. Future direction set for the compiler driver, too: it should perhaps become a binary program, rather than an sh script, and be written from scratch in Objective-C (JX). In the meantime, plans need to be laid for a configure script or similar that determines the name of `expr` (gexpr is needed) and also sets appropriate compile flags (as glibc requires definition of GNU_SOURCE and std=gnu99)

--- a/objc/Makefile.kmk
+++ b/objc/Makefile.kmk
@@ -5,6 +5,11 @@ include $(PATH_SUB_CURRENT)/oclib/Makefile.kmk
 
 PROGRAMS += objc1 postlink fixwcpp
 
+#newobjc_TEMPLATE = OBJC
+#newobjc_INCS = $(INTERNAL_INCS)
+#newobjc_LIBS = $(INTERNAL_LIBS) pthread
+#newobjc_SOURCES = drv/jxobjc.m
+
 fixwcpp_TEMPLATE = OBJC
 fixwcpp_INCS = $(INTERNAL_INCS)
 fixwcpp_LIBS = $(INTERNAL_LIBS) pthread
