--- a/objcrt/Makefile.kmk
+++ b/objcrt/Makefile.kmk
@@ -7,7 +7,7 @@ INSTALLS += objcrthdr
 objcrt_TEMPLATE = OBJC
 objcrt_SOURCES = Object/Block.m Object/Exceptn.m Object/Message.m \
 	Object/Object.m Object/OutOfMem.m Object/Proxy.m Object/RtObject.m \
-	crt.m stktrace.m memory.m seltab.m mod.m messenger.m ivar.m
+	crt.m stktrace.m memory.m seltab.m mod.m messenger.m ivar.m type.m
 
 objcrt_s_EXTENDS = objcrt
 objcrt_s_EXTENDS_BY = appending
